Rename conversion standard value loc to bibframe2
